hphp/test/zend/good/ext-standard-network/bug41347.php
<?php
var_dump(dns_check_record(''));
?>