hphp/test/zend/bad/ext/date/tests/bug46108.php
<?php

date_default_timezone_set('America/Sao_Paulo');

var_dump(unserialize(serialize(new Datetime)));

?>